// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should have pre-configured server externals (target = server) 1`] = `
Array [
  /\\^\\(react\\|react-dom\\|scheduler\\|prop-types\\|use-subscription\\)\\$/i,
  "@ampproject/toolbox-optimizer",
  [Function],
]
`;

exports[`should have pre-configured server externals (target = serverless-trace) 1`] = `
Array [
  "@ampproject/toolbox-optimizer",
  "critters",
]
`;
